# ghostty

./: .gitignore  AGENTS.md  Cargo.toml  build.zig
crates/ghostty/: Cargo.toml
crates/ghostty-cli/: Cargo.toml
crates/ghostty-cli/src/: lib.rs
crates/ghostty-config/: Cargo.toml
crates/ghostty-config/src/: cli.rs  config.rs  derived_config.rs  error.rs  file_load.rs  lib.rs  parse.rs  path.rs  string_literal.rs  theme.rs  types.rs
crates/ghostty-core/: Cargo.toml
crates/ghostty-core/src/: action.rs  app.rs  app_config.rs  events.rs  lib.rs  runtime.rs  session_command.rs  surface.rs  surface_id.rs  surface_session.rs
crates/ghostty-core/tests/: app_session.rs  surface_session.rs  surface_session_draw.rs
crates/ghostty-ffi/: Cargo.toml  build.rs
crates/ghostty-ffi/src/: lib.rs
crates/ghostty-font/: Cargo.toml
crates/ghostty-font/src/: atlas.rs  backend.rs  descriptor.rs  discovery.rs  face.rs  glyph.rs  glyph_cache.rs  lib.rs  metrics.rs  session.rs  shaping.rs  sprite.rs  style.rs
crates/ghostty-font/src/shaper/: harfbuzz.rs  mod.rs
crates/ghostty-foundation/: Cargo.toml
crates/ghostty-foundation/src/: array_list_collection.rs  blocking_queue.rs  cache_table.rs  circ_buf.rs  comparison.rs  error.rs  intrusive_list.rs  lib.rs  lru.rs  message_data.rs  segmented_pool.rs  split_tree.rs
crates/ghostty-foundation/src/os/: env.rs  mod.rs  path.rs  string_encoding.rs  uri.rs
crates/ghostty-foundation/src/unicode/: grapheme.rs  grapheme_table.rs  mod.rs  props_table.rs  symbols.rs  symbols_table.rs  width.rs
crates/ghostty-input/: Cargo.toml
crates/ghostty-input/src/: key.rs  key_mods.rs  kitty_sequence.rs  kitty_table.rs  lib.rs
crates/ghostty-renderer/: Cargo.toml
crates/ghostty-renderer/src/: atlas_texture.rs  backend.rs  bg_grid.rs  cell.rs  cells.rs  color.rs  cursor.rs  cursor_draw.rs  damage.rs  draw_backend.rs  draw_pass.rs  frame.rs  generic.rs  host.rs  lib.rs  metal.rs  opengl.rs  size.rs  state.rs  styled.rs  text.rs  uniforms.rs  webgl.rs
crates/ghostty-renderer/src/metal/: gpu.rs  mod.rs
crates/ghostty-termio/: Cargo.toml
crates/ghostty-termio/src/: color_report.rs  command.rs  exec.rs  exec_config.rs  harness.rs  lib.rs  loop.rs  mode.rs  renderer_mailbox.rs  shell.rs  shell_integration.rs  spawn.rs  stream.rs  stream_handler.rs  surface_mailbox.rs  termio.rs  thread.rs  vt_effects.rs  vt_sink.rs  winsize.rs
crates/ghostty-termio/src/pty/: mod.rs  unix.rs
crates/ghostty-termio/tests/: termio_loop.rs
crates/ghostty-vt/: Cargo.toml  build.rs
crates/ghostty-vt-tmux-tests/: Cargo.toml
crates/ghostty-vt-tmux-tests/tests/: viewer.rs
crates/ghostty/src/: main.rs
docs/: CI_RUST.md  PORTING.md  PORTING_STATUS.tsv
include/ghostty/vt/: terminal.h
src/: lib_vt.zig
src/terminal/: build_options.zig  main.zig  stream_terminal.zig
src/terminal/c/: allocator.zig  build_info.zig  cell.zig  color.zig  focus.zig  formatter.zig  grid_ref.zig  grid_ref_tracked.zig  key_encode.zig  key_event.zig  kitty_graphics.zig  main.zig  modes.zig  mouse_encode.zig  mouse_event.zig  osc.zig  paste.zig  pin_bridge.zig  render.zig  render_owned_bridge.zig  row.zig  selection.zig  sgr.zig  size_report.zig  style.zig  sys.zig  system_bridge.zig  terminal.zig
src/terminal/rust/: allocator.rs  ansi.rs  apc.rs  bitmap_allocator.rs  bitmap_allocator.zig  build_info.rs  bytes_util.rs  cargo_link_stubs.rs  cell.rs  charsets.rs  color.rs  color_change_kind.rs  color_palette.rs  constants.rs  csi.rs  cursor_style.rs  dcs.rs  device_attributes.rs  device_status.rs  early.rs  effects_wrapper.rs  event.rs  event_cell_style.rs  event_key.rs  event_key_action.rs  event_key_codepoint.rs  event_key_field.rs  event_key_mods.rs  event_key_utf8.rs  event_mouse.rs  event_mouse_action.rs  event_mouse_button.rs  event_mouse_field.rs  event_mouse_position.rs  focus.rs  focus_encode.rs  focus_sequence.rs  focus_write.rs  formatter_page.rs  formatter_screen.rs  (+227 more)
src/tools/: grapheme_table_gen.zig  props_table_rust_gen.zig  symbols_table_rust_gen.zig
