[package]
name = "ghostty-config"
description = "Ghostty configuration schema and loader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# No doc examples; avoids rustdoc using a different toolchain than RUSTC (E0514).
doctest = false

[dependencies]
ghostty-foundation = { path = "../ghostty-foundation" }
