[package]
name = "ghostty-core"
description = "Ghostty application core (App, Surface, embedded runtime)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ghostty-config = { path = "../ghostty-config" }
# Phase 6+ wiring (not used by bootstrap skeleton yet):
# ghostty-input, ghostty-termio, ghostty-font, ghostty-renderer, ghostty-vt
