[package]
name = "ghostty-core"
description = "Ghostty application core (App, Surface, embedded runtime)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Headless SurfaceSession with Rust-owned VT (unix integration tests).
rust-vt = ["dep:ghostty-termio", "dep:ghostty-foundation", "ghostty-termio/rust-vt"]

[dependencies]
ghostty-config = { path = "../ghostty-config" }
ghostty-foundation = { path = "../ghostty-foundation", optional = true }
ghostty-termio = { path = "../ghostty-termio", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
ghostty-config = { path = "../ghostty-config" }
ghostty-termio = { path = "../ghostty-termio", features = ["rust-vt"] }

[[test]]
name = "surface_session"
required-features = ["rust-vt"]

[[test]]
name = "app_session"
required-features = ["rust-vt"]
