[package]
name = "ghostty-ffi"
description = "C ABI exports for libghostty (cbindgen)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
ghostty-core = { path = "../ghostty-core" }

[build-dependencies]
cbindgen = "0.28"
