[package]
name = "ghostty-ffi"
description = "C ABI exports for libghostty (cbindgen)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
ghostty-core = { path = "../ghostty-core" }

[features]
default = []
rust-vt = ["ghostty-core/rust-vt"]

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
ghostty-termio = { path = "../ghostty-termio" }
