[package]
name = "ghostty-font"
description = "Ghostty font discovery, shaping, and atlas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Config font-family keys will wire here in a later phase.

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
freetype = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
core-text = "21.0"
