[package]
name = "ghostty-foundation"
description = "Shared Ghostty foundation types (data structures, unicode, os helpers)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ghostty-vt = { path = "../ghostty-vt", optional = true }

[features]
default = []
