[package]
name = "ghostty-renderer"
description = "Ghostty GPU renderer (Metal/OpenGL)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ghostty-foundation = { path = "../ghostty-foundation" }
ghostty-font = { path = "../ghostty-font" }
