[package]
name = "ghostty-termio"
description = "Ghostty PTY and subprocess I/O"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ghostty-foundation = { path = "../ghostty-foundation" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
