[package]
name = "ghostty-termio"
description = "Ghostty PTY and subprocess I/O"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ghostty-config = { path = "../ghostty-config" }
ghostty-foundation = { path = "../ghostty-foundation" }
ghostty-renderer = { path = "../ghostty-renderer" }
ghostty-vt = { path = "../ghostty-vt", features = ["std", "terminal-owned"], optional = true }

[features]
default = []
rust-vt = ["dep:ghostty-vt"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[[test]]
name = "termio_loop"
