[package]
name = "ghostty-vt"
description = "Ghostty virtual terminal core (libghostty-vt Rust implementation)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "../../src/terminal/rust/lib.rs"
crate-type = ["lib", "staticlib"]
test = false

[features]
default = []
terminal-owned = []
